REGRESSION (r114170): Scroll areas in nested frames improperly placed when tiled drawing is enabled https://bugs.webkit.org/show_bug.cgi?id=86239

Reviewed by Anders Carlsson.

.:

* ManualTests/resources/frame-textarea.html: Added.
* ManualTests/scrollable-positioned-frame.html: Added.
* ManualTests/scrollable-positioned-nested-frame.html: Added.

Source/WebCore:

Fixes a regression introduced in r114170 by recursively adding positions of parent frames to placement of nested frame scroll areas.

Manual tests: ManualTests/scrollable-positioned-frame.html
              ManualTests/scrollable-positioned-nested-frame.html

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::computeNonFastScrollableRegion):
(WebCore::ScrollingCoordinator::frameViewLayoutUpdated):

Canonical link: https://commits.webkit.org/103865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116832 268f45cc-cd09-0410-ab3c-d52691b4dbfc